example3/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    user: YOUR_ITERA_USERNAME
  name: YOUR_NAME-playground
