example3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example3
  labels:
    app: example3
spec:
  selector:
    app: example3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
