example3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example3
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: example3.mad.itera.no
      http:
        paths:
          - backend:
              serviceName: example3
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - example3.mad.itera.no
      secretName: example3-secret
